# mat_osnovi_infbez

./: .gitignore  README.md
lab01/docs/pres/: presentation.html  presentation.md
lab01/docs/report/: report.docx  report.md
lab01/include/: CipherHelper.h
lab01/src/: CipherHelper.cpp  main.cpp
lab02/: CMakeLists.txt
lab02/docs/: report.tar.xz
lab02/docs/pres/: presentation.html  presentation.md
lab02/docs/report/: report.docx  report.md
lab02/include/: CipherHelper2.h
lab02/src/: CipherHelper2.cpp  main.cpp
lab03/: CMakeLists.txt  docs.tar.xz
lab03/docs/pres/: presentation.html  presentation.md
lab03/docs/report/: report.docx  report.md
lab03/include/: CipherFiniteGammaHelper.h
lab03/src/: CipherFiniteGammaHelper.cpp  main.cpp
lab04/: CMakeLists.txt  docs.tar.xz  main.cpp
lab04/docs/pres/: presentation.html  presentation.md
lab04/docs/report/: report.docx
lab04/include/: GCDHelder.h
lab04/src/: GCDHelder.cpp
lab05/: CMakeLists.txt  docs.tar.xz  main.cpp
lab05/docs/pres/: presentation.html  presentation.md
lab05/inlcude/: PrimeNumbersHelper.h
lab05/src/: PrimeNumbersHelper.cpp
lab06/: CMakeLists.txt  main.cpp
lab06/docs/pres/: presentation6.html  presentation6.md
lab06/docs/report/: report6.docx  report6.md
lab06/src/: NumberDecompositionHelper.cpp  NumberDecompositionHelper.h
lab07/: CMakeLists.txt
lab07/docs/presentation/: presentation.md
lab07/docs/report/: report.docx  report.md
lab07/include/: DicreteLogarithmHelper.h
lab07/src/: DicreteLogarithmHelper.cpp  main.cpp
lab08/: CMakeLists.txt  lab08.cpp
(+4 files in other folders)
